# dtos/requests/register.go
@@ -1,0 +1,7 @@
+package requests
+
+type RegisterRequest struct {
+	Name     string `json:"name"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
